--- a/package.json
+++ b/package.json
@@ -1,12 +1,56 @@
 {
   "name": "honey-ui-2",
-  "version": "1.0.0",
+  "private": true,
+  "version": "0.1.0",
   "description": "UI for Honey project",
   "main": "index.js",
   "repository": "https://github.com/kparf/honey-ui-2.git",
   "author": "Kiryl Parfiankou <Kiryl.Parfiankou.Dev@gmail.com>",
-  "license": "MIT",
+  "scripts": {
+    "test": "eslint *.js src/**/*.mjs",
+    "build": "rollup -c && node clean.js",
+    "glitch": "git pull -s recursive -X theirs origin master && refresh",
+    "prestart": "if [ ! -d \"./public\" ]; then npm run build; fi",
+    "start": "node server.js",
+    "watch": "trap 'kill %1 && exit 0' SIGINT; node server.js & rollup -cw"
+  },
+  "config": {
+    "publicDir": "public"
+  },
   "dependencies": {
-    "rollup": "^1.20.2"
+    "core-js": "^3.2.1",
+    "date-fns": "^2.0.1",
+    "dynamic-import-polyfill": "^0.1.0",
+    "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
+    "lodash-es": "^4.17.15",
+    "moment": "^2.24.0",
+    "nunjucks": "^3.2.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
+    "ua-parser-js": "^0.7.20"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.5.5",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.2.2",
+    "eslint-config-google": "^0.13.0",
+    "eslint-plugin-react": "^7.14.3",
+    "globby": "^10.0.1",
+    "postcss-url": "^8.0.0",
+    "rollup": "^1.20.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-image": "^1.0.2",
+    "rollup-plugin-imagemin": "^0.4.1",
+    "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-url": "^2.2.2"
   }
 }
