--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "publicDir": "public"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "core-js": "^3.2.1",
     "date-fns": "^2.0.1",
     "dynamic-import-polyfill": "^0.1.0",
