--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-config-google": "^0.13.0",
     "eslint-plugin-react": "^7.14.3",
     "globby": "^10.0.1",
+    "postcss-assets": "^5.0.0",
     "postcss-url": "^8.0.0",
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
@@ -50,6 +51,7 @@
     "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-rebase": "^3.2.1",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^5.1.1",
     "rollup-plugin-url": "^2.2.2"
