--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "dynamic-import-polyfill": "^0.1.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
+    "history": "^4.9.0",
     "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
     "nunjucks": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "ua-parser-js": "^0.7.20"
   },
